# ee205-Animal-Farm

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.cpp  Node.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  addCats.c  addCats.cpp  addCats.h  catDatabase.c  catDatabase.cpp  catDatabase.h  config.h  deleteCats.c  deleteCats.cpp  deleteCats.h  linkedList.cpp  linkedList.h  main.c  main.cpp  main_debug.cpp  main_interDev.cpp  main_list_testing.cpp  main_release.cpp  reportCats.c  reportCats.cpp  reportCats.h  updateCats.c  updateCats.cpp  updateCats.h  (+3 more)
src/: Animal.cpp  List.cpp  Mammal.h  Node.cpp  Node.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  main.cpp  main_list_testing.cpp
